# sinchan_env

./: .dockerignore  .gitignore  .openenvignore  Dockerfile  README.md  RUNBOOK.md  Untitled  WHAT_TO_DO_NEXT.md  __init__.py  blog.md  client.py  models.py  openenv.yaml  pyproject.toml
assets/: README.md
server/: Dockerfile  __init__.py  app.py  characters.py  gradio_ui.py  requirements.txt  reward_engine.py  scenario_data.py  scenarios.py  sinchan_environment.py
server/static/: blog.md
server/static/sinchan/: index.html
tests/: test_smoke.py
training/: ShinChan_GRPO_Training.ipynb  evaluate_scenarios.py  plot_metrics.py  preflight_space.py  run_pipeline.py  stage1_validate_env.py  stage2_minimal_train.py  stage3_full_train.py  stage4_evaluate.py  submission_audit.py  train_sinchan.py  utf8_bootstrap.py
training/artifacts/: eval_summary.json
training/artifacts/run1/: README.md  run_metadata.json
training/artifacts/run1/checkpoint-1/: config.json  rng_state.pth  tokenizer_config.json  trainer_state.json
training/artifacts/run1/completions/: completions_00001.parquet
